--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -634,6 +634,30 @@
     background-size: cover;
 }
 
+.parallax-11-recinto {
+    /* Background image */
+    background-image: url("../img/portfolio/11-trail-fatima/IMG_0001.jpg");
+    /* Set a specific height */
+    min-height: 500px;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallax-11-chegada {
+    /* Background image */
+    background-image: url("../img/portfolio/11-trail-fatima/IMG_1001.jpg");
+    /* Set a specific height */
+    min-height: 500px;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .border-yellow{
     --bs-border-opacity: 1;
     border-color: rgba(255,238,16,var(--bs-border-opacity)) !important;
