--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -910,7 +910,7 @@
 }
 .parallax-valencia-dia2-gumball {
     /* Background image */
-    background-image: url("../img/portfolio/valencia/dia2/gumball/IMG_0014.jpg");
+    background-image: url("../img/portfolio/valencia/dia2/gumball/IMG_0014.JPG");
     /* Set a specific height */
     min-height: 500px;
     /* Create the parallax scrolling effect */
